# SofttiumBot

SoftiumBot/: .gitignore  config.py  main.py  pyproject.toml  requarments.txt
SoftiumBot/functions/: functions_programs.py
SoftiumBot/keyboards/: inline_keyboards.py  reply_keyboards.py
SoftiumBot/routers/: __init__.py
SoftiumBot/routers/callback/: __init__.py  callback_main_menu.py
SoftiumBot/routers/handlers/: __init__.py  commands.py  training_program_handler.py  trial_session_handler.py
SoftiumBot/states/: program_state.py  trial_session_state.py
